[package]
name = "rlsbin"
version = "0.1.0"
authors = ["Eguzki Astiz Lezaun <eguzki@redhat.com>"]
license = "Apache-2.0"
keywords = ["rate-limiting", "rate", "limiter", "envoy", "rls"]
categories = ["web-programming"]
description = "Rate limiting mock service that integrates with Envoy's RLS protocol"
homepage = "https://github.com/eguzki/rlsbin"
repository = "https://github.com/eguzki/rlsbin"
documentation = "https://github.com/eguzki/rlsbin"
readme = "README.md"
edition = "2021"

[features]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "5.0.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
prost = "0.13.3"
prost-types = "0.13.3"
const_format = "0.2.31"
log = "0.4"
actix-rt = "2"
clap = "4.3"

[build-dependencies]
tonic-build = "0.11"
